Fix link to 404 at enhancing_your_repl_workflow
page http://clojure-emacs.github.io/sayid/ is 404 now, replace to https://github.com/clojure-emacs/sayid

--- a/content/guides/repl/enhancing_your_repl_workflow.adoc
+++ b/content/guides/repl/enhancing_your_repl_workflow.adoc
@@ -224,7 +224,7 @@ lightweight syntax.
 
 ==== Going further: tracing libraries
 
-_Tracing_ libraries such as **https://github.com/clojure/tools.trace[tools.trace]** and **http://clojure-emacs.github.io/sayid/[Sayid]**
+_Tracing_ libraries such as **https://github.com/clojure/tools.trace[tools.trace]** and **https://github.com/clojure-emacs/sayid[Sayid]**
 can help you instrument larger portions of your code, for example by automatically printing all the function calls in a
 given namespace, or all intermediary values in a given expression.
 
