light edits on the faq entry

--- a/content/guides/faq.adoc
+++ b/content/guides/faq.adoc
@@ -57,11 +57,9 @@ _ has no special meaning in Clojure as a symbol. However, it is a convention to 
 ----
 
 [[qmark_bang]]
-**<<faq#qmark_bang,What does an ? or ! mean in a function name?>>**
+**<<faq#qmark_bang,What does a ? or ! mean in a function name?>>**
 
-? and ! have no special meaning in Clojure as part of a symbol. However, it is a convention to use a trailing ? to denote a predicate function and a trailing ! to denote a function with side-effects.
-More specifically, a trailing ? indicates that a predicate returns a strictly boolean result (`true` or `false`) rather than just truthy or falsey,
-and a trailing ! was originally intended to indicate that a function has side-effects that would make it unsafe to use inside a "transaction" (in the Software Transactional Memory sense). In the wild, the use of ! is less consistent and is sometimes used in a broader way to indicate any sort of side-effecting behavior.
+`?` and `!` have no special meaning in Clojure as part of a function name. However, it is a convention to use a trailing `?` to denote a predicate function and a trailing `!` to denote a function with side-effects. More specifically, a trailing `?` indicates that a predicate strictly returns a boolean result (`true` or `false`). A trailing `!` was originally intended to indicate that a function has side-effects that would make it unsafe to use inside a <<xref/../../reference/refs#,ref transaction>> (in the Software Transactional Memory sense). In the wild, the use of `!` is less consistent and is sometimes used in a broader way to indicate any sort of side-effecting behavior.
 
 [[anon_vector]]
 **<<faq#anon_vector,Why doesn't the anonymous function `#([%1])` work to construct a vector?>>**
