--- a/content/dev/screening_tickets.adoc
+++ b/content/dev/screening_tickets.adoc
@@ -77,7 +77,7 @@ Once you have a working copy, you should take note of the following kinds of thi
 * Make sure compile and tests pass
 * Test the functionality from the REPL
 * Does the patch accomplish the goals stated in the ticket
-* Is the code in proper style? But remember that <<xref/../../community/contrib_howto#_coding_guidelines,Coding Guidelines>> are guidelines, not fixed laws of the universe.
+* Is the code in proper style? But remember that <<xref/../../dev/contrib_howto#_coding_guidelines,Coding Guidelines>> are guidelines, not fixed laws of the universe.
 * If questions were raised in the discussion, are they answered in the ticket?
 * Are you happy with the tests, can you follow what they're testing, is there anything missing?
 * Are the tests excessive (introducing dependency on implementation detail)?
