--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,8 +22,7 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.10.1/CHANGELOG.md[repo changelog].
 
-[[1.10.1.697]]
-=== 1.10.1.697 (Sept 25, 2020)
+=== 1.10.1.697 (Sept 25, 2020) [[v1.10.1.697]]
 
 * Added https://clojure.org/reference/deps_and_cli#_executing_a_function[execution mode] (-X)
 * Added https://clojure.org/reference/deps_and_cli#_prepare_for_execution[prepare mode] (-P)
@@ -45,27 +44,23 @@ Recent official releases are described here. Prereleases and older versions can 
 * https://clojure.atlassian.net/browse/TDEPS-167[TDEPS-167] - Handle absolute resource paths in pom deps
 * Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.9.810
 
-[[1.10.1.561]]
-=== 1.10.1.561 (July 17, 2020)
+=== 1.10.1.561 (July 17, 2020) [[v1.10.1.561]]
 
 * Rework exclusion handling when exclusion sets differ for same lib/version
 * Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.8.709
 
-[[1.10.1.547]]
-=== 1.10.1.547 (June 11, 2020)
+=== 1.10.1.547 (June 11, 2020) [[v1.10.1.547]]
 
 * (Windows) Write -Spath to output, not to host
 * https://clojure.atlassian.net/browse/TDEPS-152[TDEPS-152] - Fix bad addition of srcDirectory in pom gen
 * https://clojure.atlassian.net/browse/TDEPS-155[TDEPS-155] - Add error checking for missing :mvn/version
 * Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.8.695
 
-[[1.10.1.536]]
-=== 1.10.1.536 (Feb 28, 2020)
+=== 1.10.1.536 (Feb 28, 2020) [[v1.10.1.536]]
 
 * Release automation work, no tool changes
 
-[[1.10.1.510]]
-=== 1.10.1.510 (Feb 14, 2020)
+=== 1.10.1.510 (Feb 14, 2020) [[v1.10.1.510]]
 
 * https://clojure.atlassian.net/browse/TDEPS-150[TDEPS-150] - Fix regression in supporting -Scp flag (avoid resolving deps)
 * https://clojure.atlassian.net/browse/TDEPS-148[TDEPS-148] - Fix incorrect path resolution for git/local dep without deps.edn
