--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,12 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.10.1/CHANGELOG.md[repo changelog].
 
+=== 1.10.1.716 (Oct 10, 2020) [[v1.10.1.716]]
+
+* Make edn reading tolerant of unknown tagged literals
+* Update to latest dependencies for maven-resolver and aws-api
+* Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.9.821
+
 === 1.10.1.708 (Oct 7, 2020) [[v1.10.1.708]]
 
 * Fixes to handling transitive deps when newer versions of a dep are found in the dep expansion
