Add Makimo to companies.adoc

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -250,6 +250,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://www.madriska.com/[Madriska Inc.,opts=nofollow]
 * http://www.magnet.coop/[Magnet,opts=nofollow]
 * http://mainstreetgenome.com/[Main Street Genome,opts=nofollow]
+* https://www.makimo.pl/[Makimo, opts=nofollow]
 * http://www.comidadagente.org/[Marktbauer/Comida da gente,opts=nofollow]
 * http://www.mastodonc.com/[Mastodon C,opts=nofollow]
 * http://mayvenn.com[Mayvenn,opts=nofollow]
